@@ -21,7 +21,6 @@
     $Id$
 
 ***************************************************************************/
-
 #include <string.h>
 #include "util.h"
 
