@@ -21,7 +21,6 @@
     $Id$
 
 ***************************************************************************/
-
 #ifndef __UTIL_H
 #define __UTIL_H
 
